# dsfw

./: CMakeLists.txt  main.cpp
ecs/: ecs.h  id_manager.cpp  id_manager.hpp  system.hpp  types.hpp  world.hpp
ecs/archetype/: archetype.hpp  archetype_man.hpp
ecs/systems/: system.hpp  system_manager.hpp
